Fix timeline layout bug from being affected by length of content

--- a/alcs-frontend/src/app/shared/timeline/timeline.component.html
+++ b/alcs-frontend/src/app/shared/timeline/timeline.component.html
@@ -1,10 +1,10 @@
 <div>
   <table class="timeline">
     <thead>
-      <th></th>
-      <th>Date</th>
-      <th>Fulfillment Date</th>
-      <th>Event</th>
+      <th class="timeline-line"></th>
+      <th class="timeline-date">Date</th>
+      <th class="timeline-date">Fulfillment Date</th>
+      <th class="timeline-event">Event</th>
     </thead>
     <tbody>
       <tr class="timeline-row" *ngFor="let event of events">
