--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-components.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-components.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="component" *ngFor="let component of components; let index = index; trackBy: trackByFn">
-    <app-decision-component [(data)]="components[index]" (dataChange)='onChange()'></app-decision-component>
+    <app-decision-component [(data)]="components[index]" [codes]="codes" (dataChange)='onChange()'></app-decision-component>
     <div class="row">
       <button type="button" class="remove-button" mat-stroked-button color="warn" (click)="onRemove(index)">
         Remove Component
