--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/naru/naru.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/naru/naru.component.html
@@ -1,1 +1,14 @@
-<p>naru works!</p>
+<div>
+  <div class="subheading2">Non-Farm Use Type</div>
+  {{ component.naruSubtype?.label }}
+</div>
+
+<div>
+  <div class="subheading2">Expiry Date</div>
+  {{ component.expiryDate | date }}
+</div>
+
+<div>
+  <div class="subheading2">Use End Date</div>
+  {{ component.endDate | date }}
+</div>
