--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -234,6 +234,12 @@
                   *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.PFRS"
                   [component]="component"
                 ></app-pfrs>
+
+                <app-naru
+                  class="grid-3"
+                  *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.NARU"
+                  [component]="component"
+                ></app-naru>
               </div>
             </div>
           </div>
