--- a/alcs-frontend/src/app/features/application/proposal/proposal.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/proposal.component.html
@@ -36,6 +36,7 @@
         (save)="updateApplicationValue('agCapConsultant', $event)"
       ></app-inline-text>
     </div>
+    <app-proposal-tur *ngIf="application && application.type.code === 'TURP'"></app-proposal-tur>
   </div>
   <app-proposal-nfu *ngIf="application && application.type.code === 'NFUP'"></app-proposal-nfu>
   <app-proposal-subd *ngIf="application && application.type.code === 'SUBD'"></app-proposal-subd>
