--- a/alcs-frontend/src/app/shared/details-header/details-header.component.html
+++ b/alcs-frontend/src/app/shared/details-header/details-header.component.html
@@ -40,7 +40,7 @@
   <div *ngIf="_application" class="sub-heading">
     <div>
       <div class="subheading2">Local Government:</div>
-      <div class="body-text">{{ _application.localGovernment.name }}</div>
+      <div class="body-text">{{ _application.localGovernment?.name }}</div>
     </div>
     <div *ngIf="!_application.hasOwnProperty('decisionDate')">
       <div class="subheading2">{{ days }}:</div>
