--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div>
-    <span class="region">{{ application.localGovernment.name }} - {{ application.region.label }} Region</span>
+    <span class="region">{{ application.localGovernment?.name }} - {{ application.region?.label }} Region</span>
   </div>
   <div class="header-row">
     <div class="left">
