--- a/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
@@ -1,9 +1,10 @@
 <div class="applicant-info">
   <div *ngIf="application && submission">
     <app-application-details
-      [submittedApplication]="submission"
+      [submission]="submission"
       [fileNumber]="fileNumber"
       [applicationType]="application.type.code"
+      [isSubmitted]='isSubmitted'
       [showEdit]='true'
     ></app-application-details>
   </div>
