--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
@@ -18,21 +18,25 @@
     <div class="full-width subheading1">Parcel Information</div>
     <div class="subheading2 grid-1">Ownership Type</div>
     <div class="grid-double">
-      {{ parcel.ownershipType.label }}
+      {{ parcel.ownershipType?.label }}
+      <app-no-data *ngIf="!parcel.ownershipType?.label"></app-no-data>
     </div>
     <div class="subheading2 grid-1">Legal Description</div>
     <div class="grid-double">
       {{ parcel.legalDescription }}
+      <app-no-data *ngIf="!parcel.legalDescription"></app-no-data>
     </div>
     <div class="subheading2 grid-1">Area (Hectares)</div>
     <div class="grid-double">
       {{ parcel.mapAreaHectares }}
+      <app-no-data *ngIf="!parcel.mapAreaHectares"></app-no-data>
     </div>
     <div class="subheading2 grid-1">
       PID {{ parcel.ownershipType?.code === PARCEL_OWNERSHIP_TYPES.CROWN ? '(optional)' : '' }}
     </div>
     <div class="grid-double">
       <span *ngIf="parcel.pid">{{ parcel.pid | mask : '000-000-000' }}</span>
+      <app-no-data *ngIf="!parcel.pid"></app-no-data>
     </div>
     <ng-container *ngIf="parcel.ownershipTypeCode === PARCEL_OWNERSHIP_TYPES.CROWN">
       <div class="subheading2 grid-1">PIN (optional)</div>
@@ -44,20 +48,24 @@
       <div class="subheading2 grid-1">Purchase Date</div>
       <div class="grid-double">
         {{ parcel.purchasedDate | date }}
+        <app-no-data *ngIf="!parcel.purchasedDate"></app-no-data>
       </div>
     </ng-container>
     <div class="subheading2 grid-1">Farm Classification</div>
     <div class="grid-double">
       <span *ngIf="parcel.isFarm !== null">{{ parcel.isFarm ? 'Yes' : 'No' }}</span>
+      <app-no-data *ngIf="parcel.isFarm === null"></app-no-data>
     </div>
     <div class="subheading2 grid-1">Civic Address</div>
     <div class="grid-double">
       {{ parcel.civicAddress }}
+      <app-no-data *ngIf="!parcel.civicAddress"></app-no-data>
     </div>
     <ng-container *ngIf="parcel.crownLandOwnerType">
       <div class="subheading2 grid-1">Crown Selection</div>
       <div class="grid-double">
         <span class="crown-land">{{ parcel.crownLandOwnerType }}</span>
+        <app-no-data *ngIf="!parcel.crownLandOwnerType"></app-no-data>
       </div>
     </ng-container>
     <div *ngIf="showCertificateOfTitle" class="subheading2 grid-1">Certificate Of Title</div>
