--- a/alcs-frontend/src/app/features/application/intake/intake.component.html
+++ b/alcs-frontend/src/app/features/application/intake/intake.component.html
@@ -8,7 +8,7 @@
       [required]="true"
     ></app-inline-datepicker>
   </div>
-  <div *ngIf="application?.source === 'APPLICANT'">
+  <div *ngIf="application?.source === APPLICATION_SYSTEM_SOURCE_TYPES.APPLICANT">
     <h5>Payment</h5>
     <div class="payment-section">
       <div>
@@ -41,7 +41,7 @@
       </div>
     </div>
   </div>
-  <div *ngIf="application?.source !== 'APPLICANT'">
+  <div *ngIf="application?.source !== APPLICATION_SYSTEM_SOURCE_TYPES.APPLICANT">
     <h5>Payment Date</h5>
     <app-inline-datepicker
       [value]="application?.feePaidDate"
